_lib/applications/docs-site/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs-site
  namespace: docs-site
  labels:
    app.kubernetes.io/name: docs-site
    app.kubernetes.io/instance: docs-site-${ENVIRONMENT}
    app.kubernetes.io/version: "${DOCS_VERSION}"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: docs-site
    node: worker
